<resources>
    <string name="app_name">Xeldo Project</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Xeldo Project’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your required account details, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="date_of_birth">Date of birth</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="accept_terms_and_conditions"><![CDATA[I Accept To The Terms & Conditions]]></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">\u0020Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_text">\u0020Sign Up</string>
    <string name="please_enter_member_email">Please Enter Member Email</string>

    <string name="sign_in_description_text">Enter your email and password, to sign in to your Xeldo account.</string>

    <string name="please_click_back_again_to_exit">Click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="confirm_password">Confirm password</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="dashboardTitle">Dashboard</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">"Cancel"</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>
    <string name="btn_profile_edit_text">EDIT</string>

    <string name="please_enter_list_name">Please Enter List Name</string>
    <string name="adding_task">Adding task</string>
    <string name="finalizing">Finalizing</string>
    <string name="please_enter_card_name">Please Enter Card Name</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>


    <string name="default_notification_channel_id">xeldo_project_notification_channel_id</string>
    <string name="user_not_found">User not found!</string>
    <string name="notification_title">Title</string>
</resources>