<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_up"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center"
            android:text="@string/sign_up_description_text"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/authentication_description_text_size" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <ScrollView
                android:id="@+id/svMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/card_view_layout_content_padding">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:hintTextColor="@color/colorPrimaryDark">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/et_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:hintTextColor="@color/colorPrimaryDark">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/et_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:hintTextColor="@color/colorPrimaryDark">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/date_of_birth"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <RadioGroup
                        android:id="@+id/rg_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                        android:background="@drawable/item_radio_group_tab_bg"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/item_selected_tab_radio_group_bg"
                            android:button="@null"
                            android:checked="false"
                            android:gravity="center"
                            android:text="@string/male"
                            android:textColor="@drawable/item_radio_group_text_color_selector"
                            android:textSize="@dimen/et_text_size"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/item_selected_tab_radio_group_bg"
                            android:button="@null"
                            android:checked="false"
                            android:gravity="center"
                            android:text="@string/female"
                            android:textColor="@drawable/item_radio_group_text_color_selector"
                            android:textSize="@dimen/et_text_size"
                            android:textStyle="bold" />

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:hintTextColor="@color/colorPrimaryDark">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/et_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:hintTextColor="@color/colorPrimaryDark">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/et_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                        <CheckBox
                            android:id="@+id/cbTermsCondition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                            android:buttonTint="@color/colorAccent"
                            android:text="@string/accept_terms_and_conditions"
                            android:textSize="@dimen/et_text_size"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/btn_marginStartEnd"
                        android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                        android:layout_marginEnd="@dimen/btn_marginStartEnd"
                        android:background="@drawable/shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/sign_up"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/btn_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/tv_text_size"
                            android:textColor="@color/secondary_text_color"
                            android:text="@string/already_have_an_account"/>

                        <TextView
                            android:id="@+id/tvLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/tv_text_size"
                            android:textColor="@color/primary_text_color"
                            android:text="@string/login"/>


                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>